// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card Snapshot > Card Propsに何か指定すると、style属性のオーバーライドが発生する 1`] = `
NodeList [
  <div
    class="bmui-card --shadow"
    style="--bmui-border-color: #000; --bmui-shadow-style: 0px 4px 10px color-mix(in srgb, #000000 16.000000000000004%, transparent), 0px 0px 2px color-mix(in srgb, #000000 25%, transparent);"
  >
    <div>
      content
    </div>
  </div>,
  <div
    class="bmui-card --shadow"
    style="--bmui-card-radius: 2px;"
  >
    <div>
      content
    </div>
  </div>,
  <div
    class="bmui-card --shadow -blur"
    style="--bmui-card-backdrop-blur: 1px;"
  >
    <div>
      content
    </div>
  </div>,
  <div
    class="bmui-card --shadow -alpha-override"
    style="--bmui-card-base-alpha: 100%;"
  >
    <div>
      content
    </div>
  </div>,
  <div
    class="bmui-card --shadow"
    style="--bmui-card-base-color: #000;"
  >
    <div>
      content
    </div>
  </div>,
]
`;

exports[`Card Snapshot > Card Propsは何も指定しないが、標準の属性（class, id, tabindexなど）を渡したとき、反映される 1`] = `
NodeList [
  <div
    class="bmui-card --shadow test-class"
    id="card-id"
    tabindex="1"
  >
    <div>
      content
    </div>
  </div>,
]
`;

exports[`Card Snapshot > Card Propsを何も指定しないとき、style属性のオーバーライドが発生しない 1`] = `
NodeList [
  <div
    class="bmui-card --shadow"
  >
    <div>
      content
    </div>
  </div>,
  <div
    class="bmui-card --shadow"
  >
    <div>
      content
    </div>
  </div>,
]
`;

exports[`Card Snapshot > Card Props指定あり＆styleありの場合、統合される 1`] = `
NodeList [
  <div
    class="bmui-card --shadow"
    style="--bmui-card-radius: 6px; --bmui-shadow-style: 0px 3px 5px color-mix(in srgb, #000000 15%, transparent), 0px 0px 2px color-mix(in srgb, #000000 27.499999999999996%, transparent); width: 100px; border-radius: 1px;"
  >
    <div>
      content
    </div>
  </div>,
]
`;

exports[`Card Snapshot > Variantの指定が効いている 1`] = `
NodeList [
  <div
    class="bmui-card --border"
  >
    <div>
      content
    </div>
  </div>,
  <div
    class="bmui-card --shadow"
  >
    <div>
      content
    </div>
  </div>,
]
`;
